# databricks-infra

./: .gitignore  CLAUDE.md  DataEngineer-readme.md  DataPlatformEngineer-readme.md  MKDOCS_SETUP.md  README.md  coverage.xml  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-pages.yml  deploy.yml
course/datasets/: items.json  products.csv  test.csv
course/notebooks/01_week/: 01_databricks_fundamentals.py  02_unity_catalog_deep_dive.py  03_cluster_management.py  04_spark_on_databricks.py  05_delta_lake_concepts_explained.py
course/notebooks/02_week/: 06_file_ingestion.py  07_api_ingest.py  08_database_ingest.py  09_s3_ingest.py  10_ingestion_concepts_explained.py
course/notebooks/03_week/: 11_simple_transformations.py  12_window_transformations.py  13_aggregations.py  14_transformation_concepts_explained.py
course/notebooks/04_week/: 15_file_to_aggregation.py  16_api_to_aggregation.py  17_pipeline_patterns_explained.py
docs/: DEPLOYMENT.md  DataPlatformEngineer-readme.md  USER_SCHEMA_GUIDE.md  index.md
docs/assets/: README.md
docs/course/: index.md
docs/getting-started/: data-engineer.md  index.md  platform-engineer.md
docs/infrastructure/: unity-catalog.md
docs/reference/: troubleshooting.md
docs/stylesheets/: extra.css
src/: __init__.py  user_schema.py  utils.py
terraform/: .terraform.lock.hcl  README.md  catalogs.tf  groups.tf  locals.tf  main.tf  outputs.tf  users.json  variables.tf  versions.tf
tests/: __init__.py  test_utils.py
web/: curriculum.html  data-engineer.html  index.html  platform-engineer.html  styles.css
(+19 files in other folders)
